--- a/process/scss/app.scss
+++ b/process/scss/app.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,600');
 @import 'bootstrap_custom.scss';
-@import 'partials/helpers.scss';
-@import 'partials/app.scss';
+@import 'partials/app';
+//@import 'partials/loader';
+@import 'partials/helpers';
 
