--- a/process/scss/app.scss
+++ b/process/scss/app.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,600');
 @import 'bootstrap_custom.scss';
 @import 'partials/app';
+@import 'partials/skills';
 //@import 'partials/loader';
 @import 'partials/helpers';
 
