--- a/process/scss/app.scss
+++ b/process/scss/app.scss
@@ -2,6 +2,7 @@
 @import 'bootstrap_custom.scss';
 @import 'partials/app';
 @import 'partials/skills';
+@import 'partials/pie';
 //@import 'partials/loader';
 @import 'partials/helpers';
 
