--- a/process/scss/partials/_pie.scss
+++ b/process/scss/partials/_pie.scss
@@ -30,14 +30,13 @@
 
 #pieSlice1 .pie {
   background-color: #1b458b;
-  transform:rotate(30deg);
+  ;
 }
 
 #pieSlice2 {
   transform: rotate(30deg);
   .pie {
     background-color: #0a0;
-    transform: rotate(60deg);
   }
 }
 
@@ -45,7 +44,6 @@
   transform: rotate(90deg);
   .pie {
     background-color: #f80;
-    transform: rotate(120deg);
   }
 }
 
@@ -53,7 +51,6 @@
   transform: rotate(210deg);
   .pie {
     background-color: #08f;
-    transform: rotate(10deg);
   }
 }
 
@@ -61,7 +58,6 @@
   transform: rotate(220deg);
   .pie {
     background-color: #a04;
-    transform: rotate(70deg);
   }
 }
 
@@ -69,7 +65,6 @@
   transform: rotate(290deg);
   .pie {
     background-color: #ffd700;
-    transform: rotate(70deg);
   }
 }
 
