--- a/process/scss/partials/_wakatime.scss
+++ b/process/scss/partials/_wakatime.scss
@@ -1,7 +1,10 @@
-#stats, #contact {
+#stats, #gitStats, #contact {
   padding: 5vh 0;
   background-color: #222f38;
   color: white;
+}
+#stats{
+  background-color: white;
 }
 
 
