--- a/process/scss/partials/_skills.scss
+++ b/process/scss/partials/_skills.scss
@@ -34,7 +34,7 @@
 
   ul {
     list-style: none;
-    font-size: 1rem !important;
+    font-size: 1.5rem !important;
   }
 
   .months {
@@ -185,7 +185,7 @@
       position: absolute;
       right: 10vh;
       bottom: 5vh;
-      font-size: 1rem;
+      font-size: 2rem;
     }
 
     $colors-list: #ffedcc #ffdb99 #ffc966 #ffb732 #ffa500;
@@ -205,7 +205,7 @@
         bottom: -1px;
         display: inline-block;
         list-style: none;
-        margin: 0 5px;
+        margin: 0px 10px 0 -32px;
         position: relative;
 
         li {
