--- a/process/scss/partials/_app.scss
+++ b/process/scss/partials/_app.scss
@@ -1,9 +1,9 @@
 /**  Basic Page CSS **/
-body, p{
+body, p {
   font-family: 'Rokkitt', serif;
   font-weight: 300;
   font-size: 2em;
-  overflow-x:hidden;
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -32,9 +32,11 @@ header .navbar-default .navbar-nav a {
 header .navbar-default .navbar-nav a:hover {
   color: #ad2e14;
 }
-ul.nav{
+
+ul.nav {
   margin: 25px 0;
 }
+
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
   color: whitesmoke;
   background-color: #ad2e14;
@@ -80,7 +82,7 @@ header {
     background-position: bottom left;
     background-size: 28%;
     height: auto;
-    padding:9px;
+    padding: 9px;
 
     h1 {
       color: whitesmoke;
@@ -115,18 +117,22 @@ header {
     &.inbody {
       padding-top: 0;
       padding-bottom: 0;
+
       .navbar-nav {
         margin: 15px auto;
       }
+
       .navbar-brand {
         background-size: 36px;
         background-position: bottom left;
         padding-bottom: 0;
         margin-left: 10px;
+
         h1 {
           font-size: 1.1em;
           padding-left: 38px;
         }
+
         span.subhead {
           display: none;
         }
@@ -149,8 +155,10 @@ header {
 .carousel {
   height: 100vh;
   background-color: #1B7998;
+
   &.fade {
     opacity: 1;
+
     .item {
       transition: opacity ease-out .7s;
       left: 0;
@@ -159,33 +167,37 @@ header {
       position: absolute;
       width: 100%;
       display: block;
-      background-size: cover;
+      background-size: 100% 100%;
       background-repeat: no-repeat;
       background-position: center center;
       background-attachment: fixed;
       width: 100%;
       height: 100vh;
+
       &:first-child {
         top: auto;
         opacity: 0;
         position: relative;
       }
     }
+
     .item.active {
       opacity: 1;
     }
   }
 
 }
+
 .carousel-control {
   opacity: 0;
+
   &.right,
   &.left {
     background-image: none;
   }
 }
 
-  /**  Page **/
+/**  Page **/
 .page {
   padding: 40px 0;
   font-size: 1.7rem;
@@ -216,17 +228,20 @@ header {
 #dashboard {
   background-color: #000000;
 
-  #dashboard-content{
+  #dashboard-content {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
   }
+
   .page-headline {
     color: #ad2e14;
   }
+
   p {
     color: #ad2e14;
   }
+
   img {
     width: 100%;
     margin-bottom: 10px;
@@ -236,41 +251,82 @@ header {
 
 #projects {
   line-height: 100%;
+  height: 90vh;
+  height: 90vh;
   background: whitesmoke;
+
   .page-headline {
     color: hsl(10, 79%, 38%);
   }
+  .scrollbar
+  {
+    margin-left: 30px;
+    float: left;
+    height: 55vh;
+    background: #F5F5F5;
+    overflow-y: scroll;
+    margin-bottom: 25px;
+  }
+  #style-3::-webkit-scrollbar-track
+  {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: #F5F5F5;
+  }
+
+  #style-3::-webkit-scrollbar
+  {
+    width: 6px;
+    background-color: #F5F5F5;
+  }
+
+  #style-3::-webkit-scrollbar-thumb
+  {
+    background-color: #000000;
+  }
+
+  .force-overflow
+  {
+    min-height: 450px;
+  }
+
   .appointment {
     border-bottom: 1px solid hsl(38, 24%, 67%);
     cursor: pointer;
     margin-top: 0;
     padding: 15px 0 15px 15px;
+
     &:hover {
       background: hsl(38, 24%, 77%);
     }
   }
+
   .appointment-img {
     width: 100px;
   }
+
   .appointment-heading {
     font-size: 1.6em;
     color: hsl(10, 79%, 28%);
   }
+
   .project-codetype {
     color: hsla(10, 100%, 28%, .7);
     font-size: .6em;
     font-weight: 600;
   }
+
   .appointment-owner-title {
     font-weight: 600;
     color: rgba(0, 0, 0, .6);
   }
+
   .appointment-owner-name {
     font-weight: 300;
     color: rgba(0, 0, 0, .5);
     font-size: 1.1em;
     font-style: italic;
   }
+
   .appointment-reason {
     margin-top: 5px;
     font-size: .85em;
@@ -310,11 +366,11 @@ header {
       padding: 15px;
     }
   }
-  .modal-link{
+
+  .modal-link {
 
   }
 }
-
 
 
 .list-group-item img {
@@ -344,6 +400,17 @@ header {
   width: 40%;
   max-width: 200px;
 }
+a.btn{
+  padding: 0 2em;
+  border-radius: 20%;
+  background-color:#337ab7;
+  color: whitesmoke;
+  &:hover, &:focus{
+    text-decoration: none!important;
+    background-color: whitesmoke;
+    color: #337ab7;
+  }
+}
 
 .reloadbtn {
   width: 22px;
@@ -369,6 +436,7 @@ header {
     display: inline;
   }
 }
-#contact{
+
+#contact {
   text-align: center;
 }
