--- a/process/scss/app.scss
+++ b/process/scss/app.scss
@@ -3,6 +3,7 @@
 @import 'partials/app';
 @import 'partials/skills';
 @import 'partials/pie';
+@import 'partials/projects';
 @import 'partials/wakatime';
 //@import 'partials/loader';
 @import 'partials/helpers';
