--- a/process/scss/partials/_app.scss
+++ b/process/scss/partials/_app.scss
@@ -271,9 +271,9 @@ header {
 }
 
 #projects {
-  line-height: 100%;
-  height: 90vh;
-  height: 90vh;
+  //line-height: 100%;
+  //height: 90vh;
+  //height: 90vh;
   background: whitesmoke;
 
   .page-headline {
