snackbar message WIP

--- a/process/scss/app.scss
+++ b/process/scss/app.scss
@@ -5,6 +5,7 @@
 @import 'partials/pie';
 @import 'partials/projects';
 @import 'partials/wakatime';
+@import 'partials/snackbar';
 //@import 'partials/loader';
 @import 'partials/helpers';
 
