--- a/process/scss/partials/_snackbar.scss
+++ b/process/scss/partials/_snackbar.scss
@@ -1,9 +1,11 @@
 .snackbar{
+  opacity: 0;
   position: absolute;
   left: 0;
   right: 0;
   top: 0;
   bottom : 0;
+  pointer-events: none;
   .container{
     width: 90%;
     max-width: 600px;
@@ -11,5 +13,16 @@
     transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;
+    #widescreen, #ie{
+      opacity: 0;
+    }
+    @media screen and (orientation:portrait) {
+      #widescreen{
+        opacity: 1;
+      }
+    }
+    .close{
+
+    }
   }
 }
